# An2

./: 12Dec.pkt  12Dec1.pkt  FacultateaDeMatematicaSiInformatica_Virtopeanu.Sebastin-Filip_FitnessCulturism2.doc  TS-colociu.txt  cod1.txt  lab6.py  teoriaSis.txt  test.txt
jocuri/minesweeper/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  untitled2_264.sln  untitled2_264.vcxproj  untitled2_264.vcxproj.filters
jocuri/minesweeper/.cmake/api/v1/reply/: cache-v2-93de22932fdfca986880.json  cmakeFiles-v1-1ca48e7d139066d0fb5f.json  codemodel-v2-41768f781b9010d8acb6.json  directory-_deps.sfml-build-RelWithDebInfo-0dcbbe383443eddc83e0.json  directory-_deps.sfml-build.src.SFML-RelWithDebInfo-09802d8dc110948fe2d6.json  directory-_deps.sfml-build.src.SFML.Audio-Debug-633275e393e912fe6fd7.json  directory-_deps.sfml-build.src.SFML.Audio-MinSizeRel-20b0bbc4faffcaf1295b.json  directory-_deps.sfml-build.src.SFML.Audio-RelWithDebInfo-18dca8b4dd1f331b6fc4.json  directory-_deps.sfml-build.src.SFML.Audio-Release-efa1f889d36031cc94d7.json  index-2022-12-05T04-28-27-0877.json  (+51 more)
jocuri/minesweeper/untitled2_264.dir/Release/: untitled2_264.exe.recipe
jocuri/minesweeper/untitled2_264.dir/Release/untitled2_264.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  untitled2_264.lastbuildstate
(+409 files in other folders)
